namespace-productos.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pfinal-g2
  labels:
    purpose: TrabajoFinal
