pf-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pf-app-service
  namespace: pfinal-g2
spec:
  selector:
    app: pf-app
  ports:
  - port: 80
    targetPort: 7654
  type: ClusterIP
