svc-productos.yaml
apiVersion: v1
kind: Service
metadata:
  name: gestionproductos
spec:
  type: LoadBalancer
  ports:
    - port: 80
      protocol: TCP
      targetPort: 9095
  selector:
    app: gestionproductos
