ingress-productos.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gestionproductos
  namespace: pfinal
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: myproductsapp.com
    http:
      paths:
      -  path:   /api/productos
         pathType: Prefix
         backend:
          service:
            name: gestionproductos
            port:
              number: 9095
