pf-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pf-app-ingress
  namespace: pfinal-g2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: empresa.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pf-app-service
            port:
              number: 80
      - path: /api/productos
        pathType: Prefix
        backend:
          service:
            name: pf-app-service
            port:
              number: 80
